--- a/paper/mergeable-types.tex
+++ b/paper/mergeable-types.tex
@@ -161,7 +161,7 @@ for counter is simple enough that it does not require great effort to
 identify the $P$ and $Q$ that lead to the concurrent counter versions,
 and transform them into $P'$ and $Q'$ such that the diagram in
 Fig.~\ref{fig:pushouts} commutes. For more
-sophisticated data types, such as list, this process is more involved,
+sophisticated data types, such as \C{list}, this process is more involved,
 and may require the programmer to perform non-trivial reasoning. We
 now present an alternative definition of a mergeable type that is
 stronger than Def.~\ref{def:mergeable-type}, but also serves as a
