--- a/paper/examples.tex
+++ b/paper/examples.tex
@@ -3,26 +3,26 @@
 
 \input{rope-sig}
 
-The \drawsome example demonstrates the \name's utility in building
-concurrent applications with conceptual state sharing that make them
-suitable for transparent deployment in a distributed setting. The
+The \drawsome example demonstrates \name's utility in building
+concurrent applications with conceptual state sharing, which makes
+them suitable for transparent deployment in a distributed setting. The
 model allows concurrent computations to be composed around any
-mergeable type. We now present a series of examples that demonstrate
-how mergeable types are built - either by defining merge functions for
-ML data types, or by composing existing mergeable types.
+mergeable type. We now present a series of examples of mergeable types
+built either by defining merge functions for ML data types, or by
+composing existing mergeable types.
 
 \subsection{Ropes}
 \label{sec:ropes}
 
 A rope is a data structure that facilitates efficient implementations
 of operations such as concatenation, splitting, lookup and insertion
-at a random position etc., for a list of values in a distributed
-setting. The values are usually characters, with their lists being
-strings. The data structure is a binary tree, whose leaf nodes store
-substrings of a larger string such that their left-to-right (in-order)
-concatenation yields the larger string. The idea is to facilitate
-efficient lookups and insertions at random positions in the string by
-storing position indexes in the internal nodes of the tree.
+at a random position etc., for a list of values. The values are
+usually characters, their lists being strings. A rope is essentially a
+binary tree, whose leaf nodes store substrings of a larger string such
+that their left-to-right (in-order) concatenation yields the larger
+string. The idea is to facilitate efficient lookups and insertions at
+random positions in the string by storing position indexes in the
+internal nodes of the tree.
 
 Fig.~\ref{fig:mrope-sig} shows a rope interface in OCaml. The type of
 the list of values is left abstract (\C{A.t}); it can be instantiated
@@ -30,22 +30,22 @@ with any module that supports \C{concat} and \C{split} operations. The
 interface shown in Fig.~\ref{fig:mrope-sig} is that of a mergeable
 rope (\C{MRope}), whose \C{merge} implementation is shown in
 Fig.~\ref{fig:mrope-merge}. The function returns one of its versions
-(\C{l} or \C{r}), if the other one is the same as the common
-ancestor. Otherwise, it calls \C{merge\_rec}, which recursively
-compares the structures of merging ropes, and their common ancestor.
-The function recurses until one of the ropes differs from the other
-two, or all of them are leaf nodes, at which point it relies on the
-(abstract) list merge function (\C{A.merge}) to merge the lists
-represented by the ropes. \C{merge\_rec} uses auxiliary functions,
-\C{mk\_rope} and \C{create\_index}, whose definitions are not shown to
-construct a rope given a list (\C{A.t}), and to compute the index at a
-node, given its left sub-tree, resp.
+(\C{l} or \C{r}), if the other one is the same as the common ancestor.
+Otherwise, it calls \C{merge\_rec}, which recursively compares the
+structures of merging ropes, and their common ancestor.  The function
+recurses until one of the ropes differs from the other two, or all of
+them are leaf nodes, at which point it relies on the (abstract) list
+merge function (\C{A.merge}) to merge the lists represented by the
+ropes. \C{merge\_rec} uses auxiliary functions, \C{mk\_rope} and
+\C{create\_index} (definitions not shown), respectively, to construct
+a rope given a list (\C{A.t}), and to compute the index at a node
+given its left sub-tree.
 
-One feature of the mergeable rope implementation that is characteristic
-of mergeable types in general is compositionality; a rope is a
-polymorphic mergeable data type that composes mergeability over its
-polymorphic constituents.   Compositionality is concretized by the
-\C{MRope} signature , which requires the type of items in the list
+A notable feature of the mergeable rope implementation, which is also
+a characteristic of mergeable types in general, is compositionality. A
+rope is a polymorphic mergeable data type that composes mergeability
+over its polymorphic constituents.  Compositionality is concretized by
+the \C{MRope} signature, which requires the type of items in the list
 (\C{A.t}) to also be mergeable (\C{A.merge}).
 
 \subsection{Lists}
@@ -53,12 +53,12 @@ polymorphic constituents.   Compositionality is concretized by the
 
 \input{list-sig}
 
-As an abstract data type, lists support three operations: \C{insert x
-  i l}, to insert an element \C{x} at position \C{i} in the list
-\C{l}, \C{delete i l}, to delete the element at \C{i}'th position, and
-\C{subst i x l}, to substitute the element at the \C{i}'th position
-with \C{x}.  Lists of mergeable items are mergeable if they preserve
-the following properties:
+As an abstract data type, \C{list} supports three operations:
+\C{insert x i l}, to insert an element \C{x} at position \C{i} in the
+list \C{l}, \C{delete i l}, to delete the element at \C{i}'th position
+in \C{l}, and \C{subst i x l}, to substitute the element at the
+\C{i}'th position with \C{x} in \C{l}.  Lists of mergeable items are
+mergeable if they preserve the following properties:
 \begin{itemize}
   \item Elements present in both the merging lists will be present in
   the final list. No element is deleted unless it is deleted in at
@@ -113,18 +113,20 @@ implemented in less than 50 lines of OCaml.  The functions are described below.
 		deletes the first element of $v$. However, if $s_1$ is to be applied on the
 		list \C{[c;a;b;s]} ($v_2$), which has a new element at position 0, the
 		\C{D} edit must delete the second element from $v_2$, if it were to
-		have the same effect as it did on $v$. We say \C{D(1)} in $s_1$ has to be
-		transformed w.r.t the sequence $s_2 = \C{[I(c,0);S(3,c,s)]}$.  The function
-		\C{op\_transform} (shown in the Appendix) computes such
-		\emph{operational transformations} for an edit sequence $s_1$ w.r.t another
-		edit sequence $s_2$. A notable transformation rule is for a substitution
-		w.r.t another substitution at the same position. Since the substituting
-		items could be different, the function relies on the item merge function
-		(\C{A.merge}) to merge them into a single item. For instance, in
-		Fig.~\ref{fig:list-eg}, there are simultaneous substitutions to the item
-		\C{c} in $s_1$ and $s_2$; while $s_1$ substitutes it with \C{d}, $s_2$ does
-		it with \C{s}. The merged list therefore substitutes \C{c} with the merge
-		of \C{d} and \C{s}, defined as per the merge semantics of \C{A.t}.
+    have the same effect as it did on $v$. We say \C{D(1)} in $s_1$
+    has to be transformed w.r.t the sequence $s_2 =
+    \C{[I(c,0);S(3,c,s)]}$.  The function \C{op\_transform} computes
+    such \emph{operational transformations} for an edit sequence $s_1$
+    w.r.t another edit sequence $s_2$. A notable transformation rule
+    is for a substitution w.r.t another substitution at the same
+    position. Since the substituting items could be different, the
+    function relies on the item merge function (\C{A.merge}) to merge
+    them into a single item. For instance, in Fig.~\ref{fig:list-eg},
+    there are simultaneous substitutions to the item \C{c} in $s_1$
+    and $s_2$; while $s_1$ substitutes it with \C{d}, $s_2$ does it
+    with \C{s}. The merged list therefore substitutes \C{c} with the
+    merge of \C{d} and \C{s}, defined as per the merge semantics of
+    \C{A.t}.
 \end{itemize}
 The \C{MList.merge} can now be defined as a function that first
 computes edit sequences, $s_1$ and $s_2$, for the two concurrent
@@ -176,6 +178,33 @@ composing \C{MList(Int)} with \C{MRope} (i.e., \C{MRope(MList(Int))}).
 
 \subsection{Shopping List}
 
+\begin{figure}
+\centering
+\begin{tabular}{l||l}
+\begin{ocaml}
+let alice_f : L.t unit t =
+  fork bob_f >>= fun () -> (* Invite Bob *)
+  get () >>= fun c0 ->
+  let qty = L.assoc "eggs" in
+  let c0' = L.subst 1 ("eggs",qty+1) c0 in
+  sync () ~v:c0' >>=
+  fun c1 -> return ()
+\end{ocaml}
+&
+\begin{ocaml}
+let bob_f : L.t unit t =
+  get () >>= fun c0 ->
+  let c0' = L.insert ("candy",Qty.of_int 1) 1 @@
+            L.delete @@ L.lookup "milk" in
+  sync () ~v:c0' >>=
+  fun c1 -> return ()
+\end{ocaml}
+\\
+\end{tabular}
+\caption{Bob and Alice collaboratively build a grocery shopping list}
+\label{fig:shopping-list-code}
+\end{figure}
+
 A non-trivial demonstration illustrating the compositional power of
 mergeable types is a shopping list application that allows its users
 to collaboratively build a shopping list (listing items in the
@@ -205,9 +234,10 @@ concurrent sessions. The merged shopping list contains \C{eggs} and
   \vspace*{.25in}
 \end{wrapfigure}
 and Bob's quantity as per the definition of \C{Qty.merge}.
-The examples described above make certain assumptions about the
-concurrency model and the underlying system, such as the existence of
-a single lowest common ancestor (LCA) for any pair of versions, the
+
+The examples described in this section make certain assumptions about
+the concurrency model and the underlying system, such as the existence
+of a single lowest common ancestor (LCA) for any pair of versions, the
 ability to access a previous version on any branch, and mergeability
 of any two concurrent versions. Enforcing these guarantees in a fully
 decentralized distributed setting requires addressing non-trivial
@@ -215,30 +245,3 @@ theoretical challenges. These, and other details that contribute to
 the practicality of our model, such as containing the complexity of
 merges, are discussed in subsequent sections.
 
-
-\begin{figure}
-\centering
-\begin{tabular}{l||l}
-\begin{ocaml}
-let alice_f : L.t unit t =
-  fork bob_f >>= fun () -> (* Invite Bob *)
-  get () >>= fun c0 ->
-  let qty = L.assoc "eggs" in
-  let c0' = L.subst 1 ("eggs",qty+1) c0 in
-  sync () ~v:c0' >>=
-  fun c1 -> return ()
-\end{ocaml}
-&
-\begin{ocaml}
-let bob_f : L.t unit t =
-  get () >>= fun c0 ->
-  let c0' = L.insert ("candy",Qty.of_int 1) 1 @@
-            L.delete @@ L.lookup "milk" in
-  sync () ~v:c0' >>=
-  fun c1 -> return ()
-\end{ocaml}
-\\
-\end{tabular}
-\caption{Bob and Alice collaboratively build a grocery shopping list}
-\label{fig:shopping-list-code}
-\end{figure}
