--- a/mlw2017/abstract.tex
+++ b/mlw2017/abstract.tex
@@ -128,18 +128,19 @@
 
 \lstMakeShortInline[columns=fullflexible]|
 
-\title{Mergeable Types}
+\title{{\bf Mergeable Types}}
 \author{Gowtham Kaki \\
         Purdue University
         \and
 				KC Sivaramakrishnan \\
         University of Cambridge
 				\and
-				Suresh Jagannathan \\
-				Purdue University
-				\and
 				Samodya Abeysiriwardane \\
+				Purdue University\\
+                                \and
+                              	Suresh Jagannathan \\
 				Purdue University}
+			
 \date{~}
 
 \newcommand{\cf}[1]{{\small\tt #1}}
